##Text encoding: utf-8

2016-02-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/arrow.cc: export graphic objects to .cdx.
	* libs/gcp/arrow.h: ditto.
	* libs/gcp/reaction-operator.cc: ditto.
	* libs/gcp/reaction-operator.h: ditto.
	* libs/gcp/reaction-step.cc: improve operator position.
	* libs/gcp/text.cc: enhance position preision on export.
	* libs/gcu/atom.cc: ditto.
	* plugins/loaders/cdx/cdx.cc: export graphic objects.

2016-02-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/text.cc: ensure font family is correctly exported.
	* plugins/loaders/cdx/cdx.cc: save theme and fix various text export issues.

2016-02-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/document.cc: fix build with gcc-6 (and potential crasher).
	[Redhat bug #1307546]
	* plugins/loaders/cdx/cdx.cc: fix exported text position.

2016-02-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: fixd crasher.
	* libs/gcp/text.cc: add GetProperty() to allow for text export.
	* libs/gcp/text.h: ditto.
	* plugins/loaders/cdx/cdx.cc: partial implementation of text export.
	* plugins/loaders/cml/cml.cc: typo.

2016-02-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/table/gchemtable-app.cc: fixed typos. [#47081]
	* programs/table/gchemtable-curve.cc: ditto.
	* programs/table/gchemtable-data.cc: ditto.

2016-02-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: fixed text vertical position.

2016-02-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reactant.cc: fix reaction import from cdx format.
	* libs/gcp/reactant.h: ditto.
	* libs/gcp/reaction-arrow.cc: allow reaction arrow attached objects
	import.
	* libs/gcp/reaction-arrow.h: ditto.
	* libs/gcp/reaction-prop.cc: ditto.
	* libs/gcp/reaction-prop.h: ditto.
	* libs/gcp/text.cc: minor optimization.
	* libs/gcu/objprops.h: allow reaction arrow attached objects import.
	* plugins/loaders/cdx/cdx.cc: full reaction import.
